# windsolar

./: CMakeLists.txt  README.md  debug.h  main.c
Examples/: 0_hello_world.wnd  1_hello_user.wnd  2_quick_maths.wnd  3_loop.wnd  4_fibo.wnd  5_beer.wnd  6_primes.wnd  hello_world.wnd
Grammer/: Grammer.txt
Guides/: Commands.md  Syntax.md
Windsolar/: args.c  args.h  commands.c  commands.h  error.c  error.h  file_reader.c  file_reader.h  flags.h  frames.c  frames.h  macros.h  main.c  parse_tree.c  parse_tree.h  reader.c  reader.h  runtime.c  runtime.h  stack.c  stack.h  stacks.c  stacks.h  token.c  token.h  tokenizer.c  tokenizer.h  utils.c  utils.h
